Add letter-spacing to accesibility

--- a/cliente/src/app/pages/welcome/welcome.page.html
+++ b/cliente/src/app/pages/welcome/welcome.page.html
@@ -3,7 +3,7 @@
   <!-- Slides de bienvenida -->
   <swiper-container #swiper [slidesPerView]="1" [modules]="swiperModules">
     <swiper-slide>
-      <img class="logo-its" src="../../../assets/img/welcome/its-logo-512.jpg" alt="">
+      <img class="logo-its" src="../../../assets/img/welcome/its-logo-512.jpg" alt="Logo Instituto Técnico Superior Cipolletti">
       <h1>Bienvenidos</h1>
       <p>Los invitamos a ser parte de nuestra comunidad</p>
     </swiper-slide>
@@ -11,7 +11,7 @@
     <swiper-slide>
       <h1>Acerca de ESIAPP</h1>
       <p>Te traemos información de calidad para acompañarte en cada etapa de tu vida.</p>
-      <img class="children" src="../../../assets/img/welcome/002.png" alt="">
+      <img class="children" src="../../../assets/img/welcome/002.png" alt="Imágen de bienvenida, personas de diferentes etnias conviviendo juntas">
     </swiper-slide>
 
     <swiper-slide>
