--- a/cliente/src/global.scss
+++ b/cliente/src/global.scss
@@ -37,3 +37,8 @@
     }
     background: black !important;
 }
+
+//Clase para espaciado de letras
+.space-letter{
+    letter-spacing: 4px !important;
+}
