--- a/cliente/src/app/pages/auth/login/login.page.html
+++ b/cliente/src/app/pages/auth/login/login.page.html
@@ -1,12 +1,12 @@
 <ion-content [fullscreen]="true">
     <div id="wrapper" class="wrapper">
       <img src="../../../../assets/img/welcome/005.png" alt="">
-      <h2>Ingresa con tus datos</h2>
+      <h2 id="spacing" class="spacing">Ingresa con tus datos</h2>
       <div id="form-container" class="form-container">
         <br><br>
         <ion-input fill="outline" label="Usuario" type="text" placeholder="Ingresa Usuario" labelPlacement="floating"></ion-input>
         <ion-input fill="outline" label="Contraseña" type="password" placeholder="Ingresa Contraseña" labelPlacement="floating" autocomplete="false"></ion-input>
-        <ion-button click="onClick()" expand="block" color="dark" fill="solid">
+        <ion-button click="onClick()" expand="block" color="dark" fill="solid" id="spacing" class="spacing">
           Ingresa
         </ion-button>
         <div class="access-logo-container">
