--- a/cliente/src/app/components/shared/accessibility/accessibility.component.scss
+++ b/cliente/src/app/components/shared/accessibility/accessibility.component.scss
@@ -48,6 +48,7 @@
             ion-icon {
                 margin: auto;
                 font-size: 1.75em;
+                color: var(--ion-color-primary) !important
             }
             
             p {
