--- a/cliente/src/app/home/home.page.scss
+++ b/cliente/src/app/home/home.page.scss
@@ -1,27 +1,41 @@
-#container {
-  text-align: center;
+@import '../components/shared/accessibility/accessibility.component.scss';
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
+.home-wrapper {
+  position: relative;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  width: 100vh;
+  max-width: 100%;
+  height: 100%;
+  background-color: var(--ion-color-dark);
+  .accessibility-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    z-index: 1000;
+    right: 5%;
+    top: 5%;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: var(--ion-color-primary);
+    box-shadow: -5px -5px 5px -3px rgba(0,0,0,0.1);
+    padding: 0px;
+    .inner-circle {
+      width: 40px;
+      height: 40px;
+      border: 3px solid var(--ion-color-dark);
+      border-radius: 50%;
+      margin: 0px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.8em;
+    }
+  }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+  
 }
