Auth service y interceptor de token agregado

--- a/cliente/src/app/pages/auth/login/login.page.html
+++ b/cliente/src/app/pages/auth/login/login.page.html
@@ -4,9 +4,9 @@
       <h2 id="login-title">Ingresa con tus datos</h2>
       <div id="form-container" class="form-container">
         <br><br>
-        <ion-input id="user" fill="outline" label="Usuario" type="text" placeholder="Ingresa Usuario" labelPlacement="floating"></ion-input>
+        <ion-input id="username" fill="outline" label="Usuario" type="text" placeholder="Ingrese su correo" labelPlacement="floating"></ion-input>
         <ion-input id="pass" fill="outline" label="Contraseña" type="password" placeholder="Ingresa Contraseña" labelPlacement="floating" autocomplete="false"></ion-input>
-        <ion-button id="sub-btn" (click)="navigateLogin()"  expand="block" color="dark" fill="solid">
+        <ion-button id="sub-btn" (click)="loginUser()"  expand="block" color="dark" fill="solid">
           Ingresa
         </ion-button>
         <div class="access-logo-container" id="access-logo-ctn">
