--- a/cliente/src/app/home/home.page.html
+++ b/cliente/src/app/home/home.page.html
@@ -5,6 +5,25 @@
         <ion-icon name="accessibility"></ion-icon>
       </div>
     </div>
+
+    <!-- <ion-header>
+      <div class="custom-toolbar">
+        <h2>Bienvenid@</h2>
+        <h4>Nombre Apellido</h4>
+      </div>
+    </ion-header>
+
+    <div class="slideshow-container">
+      <ion-card color="primary">
+        <ion-card-header>
+          <ion-card-subtitle>Categoria</ion-card-subtitle>
+          <ion-card-title>Awesome Title</ion-card-title>
+        </ion-card-header>
+      </ion-card>
+    </div> -->
+
+    
+
     <ion-modal trigger="open-access" [initialBreakpoint]="0.75" [breakpoints]="[0,0.75]">
       <ng-template>
         <div class="title" >
@@ -14,8 +33,8 @@
           <div class="row">
             <!-- el boton activa o desactiva la opcion deseada -->
             <!-- pasamos el metodo para elegir la opcion deseada (switchMethods(indice)) -->
-            <div class="btn" *ngFor="let option of options; let i = index" (click)="activeBtn(i)">
-              <ion-icon slot="start" color="light" [name]="option.icon"></ion-icon>
+            <div class="btn" *ngFor="let option of options; let i = index" (click)="activeOption(i)">
+              <ion-icon slot="start" [color]="option.active ? 'primary' : 'light'" [name]="option.icon"></ion-icon>
               <p id="btn-text{{i}}">{{option.title}}</p>
             </div>
 
