--- a/cliente/src/global.scss
+++ b/cliente/src/global.scss
@@ -25,7 +25,8 @@
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
 
-
+// swiper
+@import '../node_modules/swiper/swiper-bundle.min.css';
 
 // agregado fuente Dyslexic Friendly
 @font-face {
