--- a/cliente/src/app/pages/welcome/welcome.page.scss
+++ b/cliente/src/app/pages/welcome/welcome.page.scss
@@ -1,21 +1,52 @@
+
 ion-content {
+  .circle {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    right: 10.5px;
+    top: 2rem;
+    z-index: 1000;
+    border-radius: 50%;
+  }
+
+  .pulse {
+        animation: pulse-animation 2s infinite;
+  }
+
+  @keyframes pulse-animation {
+    0% {
+      box-shadow: 0 0 0 0px var(--ion-color-primary);
+      opacity: 0.2;
+    }
+    100% {
+      box-shadow: 0 0 0 20px rgba(0, 0, 0, 0);
+    }
+  }
+    position: relative;
     max-height: 100%;
+
     swiper-container {
         background: var(--ion-color-primary-contrast);
-        min-height: 80%;
+        padding-top: 5rem;
+        height: 550px;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         font-family: 'Raleway', sans-serif;
+        position: relative;
         swiper-slide {
+            overflow: auto;
             width: 100%;
-            min-height: 100%;
+            // min-height: 100%;
+            max-height: 100%;
             background: var(--ion-color-primary-contrast);
             text-align: center;
             padding: 4px 16px;
             justify-content: center;
             color: black;
+            overflow-x: auto;
             img.logo-its {
                 max-height: 200px;
             }
@@ -24,6 +55,21 @@ ion-content {
                 height: auto;
                 position: relative;
             }
+
+            .arrow {
+              width: 100%;
+              height: 3rem;
+              display: flex;
+              flex-direction: row-reverse;
+              font-size: 3em;
+              font-weight: 900;
+              padding: 8px 0px;
+            }
+
+
+
+
+
             h1 {
                 font-size: 2.5em;
             }
@@ -39,14 +85,14 @@ ion-content {
                 justify-items: center;
                 text-align: center;
                 justify-content: center;
-                font-size: 3.5em;
+                font-size: 2.5em;
                 border: 5px solid var(--ion-color-primary);
                 background: #cccccc;
                 width: 2em;
                 height: 2em;
                 border-radius: 50%;
                 margin: 8px auto;
-                
+
             }
 
         }
@@ -78,4 +124,94 @@ ion-content {
         justify-content: space-between;
         padding: 8px 16px;
     }
+
+
+
 }
+
+.title {
+  width: 100%;
+  height: 5rem;
+  text-align: center;
+  justify-content: center;
+  display: flex;
+  margin: 0px;
+  background-color: var(--ion-color-primary);
+  padding-top: 1.5rem;
+
+  h3 {
+    font-size: 1.75em;
+    color: #cccccc;
+    font-weight: 500;
+    margin: 0px !important;
+  }
+}
+.wrapper {
+  background: #cccccc;
+  min-width: 100%;
+  min-height: 90vh;
+  display: flex;
+  flex-direction: column;
+  padding: 2rem 0.5rem;
+  position: relative;
+  overflow-y: hidden;
+  overflow-x: auto;
+  .row {
+      min-width: 100%;
+      max-width: 100%;
+      padding: 0px 0.75rem;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      flex-wrap: wrap;
+      flex-flow: row wrap;
+      .btn {
+          padding: 10px 0px;
+          min-width: 150px;
+          height: 120px;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          align-items: center;
+          margin: 10px 10px;
+          border-radius: 15px;
+          box-shadow: 0px 9px 45px -3px rgba(0,0,0,0.1);
+          border: 1px solid rgba(0, 0, 0, 0.2);
+          ion-icon {
+              margin: auto;
+              font-size: 2.75em;
+              color: var(--ion-color-primary) !important
+          }
+
+          p {
+              max-height: fit-content;
+              margin: 4px 0px;
+              color: var(--ion-color-light);
+              font-size: 1.2em;
+          }
+
+          p.active {
+              font-weight: 600;
+              color: var(--ion-color-primary)
+          }
+
+
+      }
+
+      .btn.active {
+          p {
+              font-weight: 600;
+              color: var(--ion-color-primary)
+          }
+      }
+
+
+
+      .btn:hover {
+          transform: scale(1.01);
+          background: rgba(0, 0, 0, 0.2);
+      }
+  }
+}
+
+
