--- a/cliente/src/app/pages/auth/login/login.page.scss
+++ b/cliente/src/app/pages/auth/login/login.page.scss
@@ -33,7 +33,7 @@ ion-content {
             transform: translateY(-2px);
             height: 80vh;
             flex-grow: 1;
-            border-radius: 20px 20px 0px 0px;
+            //border-radius: 20px 20px 0px 0px;
             background: var(--ion-color-light);
             padding: 16px 32px;
             text-align: start;
@@ -43,9 +43,10 @@ ion-content {
             ion-input {
                 margin: 8px 0px;
                 border-bottom: 1px solid var(--ion-color-dark) !important;
+                padding-left: 15px !important;
             }
             ion-button {
-                margin: 20px 0px;
+                margin: 25px 0px;
             }
             
             .access-logo-container {
