--- a/cliente/src/global.scss
+++ b/cliente/src/global.scss
@@ -58,22 +58,34 @@
 .dyslexic-font {
     font-family: 'OpenDyslexic-Regular', sans-serif !important;
     p {
-      font-size: 16px !important;
+      font-size: 1em !important;
     }
-
+    .medium-font{
+      h1{
+        font-size: 2.3em !important;
+      }
+      .space-letter{
+        letter-spacing: 1.1px !important;
+      }
+    }
+    .space-letter{
+      letter-spacing: 1.2px !important;
+    }
 }
 
 // clase para aumentar tamaño de texto (Facu)
 .medium-font {
     p {
-      font-size: 19px !important;
+      font-size: 1.2em !important;
     }
     h1 {
-      font-size: 40px !important;
+      font-size: 2.65em !important;
     }
-    .arrow {
-      font-size: 2em;
-      transform: translateX(0.5rem);
+    h2{
+      font-size: 5em !important;
+    }
+    .label-text{
+      font-size: 20px !important;
     }
 }
 
@@ -114,10 +126,10 @@
 
 //Clase para espaciado de letras (Moyano)
 .space-letter{
-    letter-spacing: 4px !important;
+    letter-spacing: 1.3px;
 }
 
 //filtro para luminosidad
-.bright{
+/*.bright{
   filter: brightness(150%);
-}
+}*/
