--- a/cliente/src/app/home/home.page.scss
+++ b/cliente/src/app/home/home.page.scss
@@ -10,57 +10,27 @@
   max-width: 100%;
   height: 100%;
   background-color: var(--ion-color-dark);
-  .accessibility-btn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  .overlay {
     position: absolute;
-    z-index: 1000;
-    right: 5%;
-    top: 5%;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: var(--ion-color-primary);
-    box-shadow: -5px -5px 5px -3px rgba(0,0,0,0.1);
-    padding: 0px;
-    .inner-circle {
-      width: 40px;
-      height: 40px;
-      border: 3px solid var(--ion-color-dark);
-      border-radius: 50%;
-      margin: 0px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 1.8em;
-    }
-  }
-  ion-header {
-    padding: 0px;
-    .custom-toolbar {
-      padding: 40px 16px;
-      height: 100px;
-      background: var(--ion-color-light);
-      h2 {
-        margin: 0px;
-        font-weight: 900;
-      }
-      h4 {
-        margin: 1px 0px;
-        font-weight: 300;
-      }
-    }
-  }
-
-  .slideshow-container {
-    height: 200px;
-    min-width: 100%;
-    background: var(--ion-color-light);
-    overflow: auto;
+    opacity: 0.4;
+    width: 100%;
+    height: 100%;
+    background: var(--ion-color-dark);
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    ion-spinner {
+      width: 60px;
+      height: 60px;
+    }
   }
-
-  
+  .header {
+    width: 100%;
+    display: flex;
+    height: 110px;
+    padding: 32px 16px;
+    background: var(--ion-color-light);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  }
 }
