--- a/cliente/src/app/pages/auth/login/login.page.scss
+++ b/cliente/src/app/pages/auth/login/login.page.scss
@@ -2,8 +2,9 @@
     overflow: hidden;
 }
 
+
 ion-content {
-    
+
     .wrapper {
         overflow: hidden;
         max-height: 100%;
@@ -11,7 +12,7 @@ ion-content {
         display: flex;
         flex-direction: column;
         text-align: center;
-        
+
         img {
             opacity: 0.5;
             position: relative;
@@ -41,14 +42,16 @@ ion-content {
             flex-direction: column;
             box-shadow: 0px -11px 12px -3px rgba(0,0,0,0.1);
             ion-input {
+                padding: 4px 0px !important;
                 margin: 8px 0px;
-                border-bottom: 1px solid var(--ion-color-dark) !important;
-                padding-left: 15px !important;
+                border-bottom: none;
+                padding-left: 0px !important;
+
             }
             ion-button {
                 margin: 25px 0px;
             }
-            
+
             .access-logo-container {
                 cursor: pointer;
                 display: flex;
@@ -64,10 +67,10 @@ ion-content {
                 height: 1.5em;
                 border-radius: 50%;
                 margin: 32px auto;
-                
+
             }
         }
 
-        
+
     }
 }
