--- a/cliente/src/app/home/home.page.scss
+++ b/cliente/src/app/home/home.page.scss
@@ -3,7 +3,7 @@
 
 .home-wrapper {
   position: relative;
-  overflow: auto;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   width: 100vh;
@@ -32,5 +32,42 @@
     padding: 32px 16px;
     background: var(--ion-color-light);
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  }
+
+  .body {
+    max-height: 100%;
+    height: calc(100% - 110px);
+    position: relative;
+    .scrollable-div {
+      max-height: 100%;
+      overflow-y: auto;
+      padding: 16px 8px;
+      .item-container {
+        height: 120px;
+        min-width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img {
+          max-width: 42%;
+          position: absolute;
+          left: 0;
+          z-index: 10020;
+        }
+        .inner-container {
+          min-width: 100%;
+          height: 90px;
+          padding: 8px 16px;
+          border-radius: 10px;
+          background-color: #a399b2;
+          background-image: linear-gradient(147deg, #a399b2 0%, #4d4855 74%);
+          display: flex;
+          flex-direction: row-reverse;
+          z-index: 10019;
+          box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+        }
+      }
+    }
+
   }
 }
