--- a/cliente/src/app/pages/auth/login/login.page.html
+++ b/cliente/src/app/pages/auth/login/login.page.html
@@ -29,7 +29,7 @@
             autocomplete="false"
           ></ion-input>
           <small *ngIf="passwordInvalid" style="color:red;">La contraseña debe tener entre 8 a 20 caracteres</small>
-          <ion-button id="sub-btn" expand="block" color="dark" fill="solid" type="submit">
+          <ion-button id="sub-btn" disabled="false" expand="block" color="dark" fill="solid" type="submit">
             Ingresa
           </ion-button>
         </form>
