--- a/cliente/src/app/home/home.page.html
+++ b/cliente/src/app/home/home.page.html
@@ -4,18 +4,37 @@
       <ion-spinner name="circular" color="light"></ion-spinner>
     </div>
     <div class="header">
-      <h3>Hola {{name$ | async}}</h3>
+
+
     </div>
 
     <div class="body">
+      <div class="title">
+        <h3>Hola {{name$ | async}}</h3>
+      </div>
       <div class="scrollable-div">
-        <div class="item-container">
-          <img src="../../assets/img/home_list/9868185_4280167.svg" alt="">
-          <div class="inner-container">
-            <h4>Sist. Reproductor</h4>
-
+        <div class="outer-container">
+          <div class="item-container-left">
+            <img src="../../assets/img/home_list/9868185_4280167.svg" alt="">
+          </div>
+          <div class="item-container">
+            <div class="inner-container">
+              <h4>Sist. Reproductor</h4>
+            </div>
           </div>
         </div>
+
+        <div class="outer-container">
+          <div class="item-container-left right">
+            <img src="../../assets/img/home_list/35457979_8312630.svg" alt="">
+          </div>
+          <div class="item-container right">
+            <div class="inner-container">
+              <h4>Sist. Reproductor</h4>
+            </div>
+          </div>
+        </div>
+
 
       </div>
     </div>
