--- a/cliente/src/app/home/home.page.scss
+++ b/cliente/src/app/home/home.page.scss
@@ -29,47 +29,107 @@
   .header {
     width: 100%;
     display: flex;
-    height: 110px;
+    height: 100px;
     padding: 32px 16px;
     background: var(--ion-color-light);
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    background-image: url(../../assets/img/home_list/16390809_5742805.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 0px -120px;
+
+
+
   }
 
   .body {
+    .title {
+      padding: 0 16px;
+      display: flex;
+      flex-direction: row;
+      background: transparent;
+      align-items: flex-start;
+      h3 {
+        color: black;
+        margin: auto 0px;
+        font-size: 1.5rem;
+      }
+    }
     max-height: 100%;
     height: calc(100% - 110px);
     position: relative;
     .scrollable-div {
       max-height: 100%;
       overflow-y: auto;
-      padding: 16px 8px;
-      .item-container {
-        height: 120px;
-        min-width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        img {
-          max-width: 42%;
-          position: absolute;
-          left: 0;
-          z-index: 10020;
-        }
-        .inner-container {
-          min-width: 100%;
-          height: 90px;
-          padding: 8px 16px;
-          border-radius: 10px;
-          background-color: #a399b2;
-          background-image: linear-gradient(147deg, #a399b2 0%, #4d4855 74%);
-          display: flex;
-          flex-direction: row-reverse;
-          z-index: 10019;
-          box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+      padding: 8px 8px;
+      .outer-container:hover {
+        height: 130px;
+        .item-container-left {
+          width: 130px;
         }
       }
+      .outer-container {
+        transition: linear 100ms ease-in;
+        height: 120px;
+        min-width: 100%;
+        justify-content: center;
+        display: flex;
+        flex-direction: column;
+        .item-container-left {
+          position: absolute;
+          z-index: 10020;
+          width: 120px;
+          img {
+            min-width: 100%;
+            left: 0;
+            transform: translateX(-10px);
+
+          }
+        }
+
+        .item-container-left.right{
+          right: 0;
+          img {
+            transform: translateY(-18px);
+
+
+          }
+        }
+
+        .item-container {
+          height: 120px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          position:relative;
+
+
+          .inner-container {
+            width: 100%;
+            height: 90px;
+            padding: 8px 16px;
+            border-radius: 10px;
+            background: #e96443; /* fallback for old browsers */
+            background: -webkit-linear-gradient(to right, #e96443, #904e95); /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to right, #e96443, #904e95); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+            display: flex;
+            flex-direction: row-reverse;
+            z-index: 10019;
+            h4 {
+              margin: auto 0;
+            }
+          }
+        }
+        .item-container.right {
+          .inner-container {
+            flex-direction: row;
+          }
+        }
+
+
+      }
     }
-
   }
-
 }
+
+
