--- a/cliente/src/app/home/home.page.html
+++ b/cliente/src/app/home/home.page.html
@@ -13,13 +13,13 @@
         <h3>Hola {{name$ | async}}</h3>
       </div>
       <div class="scrollable-div">
-        <div class="outer-container">
+        <div class="outer-container" (click)="navigatePuzzle()">
           <div class="item-container-left">
             <img src="../../assets/img/home_list/9868185_4280167.svg" alt="">
           </div>
           <div class="item-container">
             <div class="inner-container">
-              <h4>Sist. Reproductor</h4>
+              <h4>Juego 1</h4>
             </div>
           </div>
         </div>
