--- a/cliente/src/app/pages/game-puzzle/game-puzzle.page.html
+++ b/cliente/src/app/pages/game-puzzle/game-puzzle.page.html
@@ -30,10 +30,14 @@
             <div id="cell33" class="tile tile9" (click)="clickTile(3,3)"></div>
           </div>
         </div>
-        <ion-button (click)="mezclarTiles()" fill="fill" shape="round">
-          Mezclar
-        </ion-button>
+
       </div>
+      <ion-button (click)="mezclarTiles()" fill="fill">
+        Mezclar
+      </ion-button>
+      <ion-button class="back" (click)="goBack()">
+        Volver
+      </ion-button>
     </div>
   </div>
 </ion-content>
