Changes front memory game

--- a/cliente/src/app/home/home.page.html
+++ b/cliente/src/app/home/home.page.html
@@ -24,6 +24,17 @@
           </div>
         </div>
 
+        <div class="outer-container" (click)="navigateMemory()">
+          <div class="item-container-left">
+            <img src="../../assets/img/home_list/9868185_4280167.svg" alt="">
+          </div>
+          <div class="item-container">
+            <div class="inner-container">
+              <h4>Juego 2</h4>
+            </div>
+          </div>
+        </div>
+
         <div class="outer-container">
           <div class="item-container-left right">
             <img src="../../assets/img/home_list/35457979_8312630.svg" alt="">
