--- a/cliente/src/app/pages/games/memory_game/memory-game/memory-game.page.scss
+++ b/cliente/src/app/pages/games/memory_game/memory-game/memory-game.page.scss
@@ -1,24 +1,152 @@
+// ion-content{
+//   --background: #f0f0f0;
+// }
+
+.title-container {
+  display: flex;
+  align-items: center;
+}
+
+.icon {
+  margin-right: 70px;
+  font-size: 26px;
+  vertical-align: text-top;
+}
 
 
+.intentos {
+  text-align: center;
+  margin-top: 160px;
+  padding: 20px;
+
+  .intro {
+    font-size: 25px;
+    font-weight: 400;
+  }
+
+  .intro-sbt {
+    font-size: 20px;
+
+    span {
+      color: rgb(255, 142, 127);
+      font-weight: 700;
+    }
+  }
+
+  p {
+    font-size: 25px;
+    text-align: center;
+  }
+}
 
 
+.juego {
+  padding-left: 20px;
+  padding-right: 20px;
+  padding: 10px 20px 10px 20px;
+}
+
+.intentos-restantes {
+  margin-left: 20px;
+  margin-top: 20px;
+}
+
+p {
+  font-size: 25px;
+}
+
+.container {
+  margin: 0 10px 0 10px;
+  border: 1px solid black;
+  border-radius: 12px;
+}
+
+.time {
+  color: #fff;
+  font-weight: 500;
+  line-height: 0.22px;
+  margin-left: 20px;
+  margin-top: 35px;
+}
+
+.game-win {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  margin-top: 50px;
+
+  .win-title {
+    font-size: 36px;
+    margin-bottom: 20px;
+    color: #fff;
+    text-shadow:
+    0 0 5px #fff,
+    0 0 10px #fff,
+    0 0 40px #00ff00, 
+    0 0 80px #00ff00, 
+  }
+
+  .trophy{
+    font-size: 30px;
+  }
+
+  .game-over-sbt{
+    margin-top: 50px;
+    font-size: 22px;
+    margin: 0 10px 0 10px;
+  }
+  
+  .win-text {
+    text-align: center;
+    font-size: 18px;
+    margin-bottom: 30px;
+    animation: fadeIn 1s 0.5s;
+  }
+}
 
 
+.game-over {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  margin-top: 50px;
 
+  .game-over-title {
+    font-size: 36px;
+    margin-bottom: 20px;
+    color: #fff;
+    text-shadow:
+    0 0 5px #fff,
+    0 0 10px #fff,
+    0 0 40px #ff0000,
+    0 0 80px #ff0000,
+  }
 
+  .game-over-sbt{
+    margin-top: 50px;
+    font-size: 22px;
+    margin: 0 10px 0 10px;
+  }
+  
+  .game-over-text {
+    text-align: center;
+    font-size: 18px;
+    margin-bottom: 30px;
+    animation: fadeIn 1s 0.5s;
+  }
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
+.buttons{
+  ion-button{
+    width: 180px;
+    height: 40px;
+    margin-right: 10px;
+    margin-left: 10px;
+  }
+}
+//!Hecho por Javi, no tocar
 /*
   .tile {
     display: table-cell;
