--- a/cliente/src/app/pages/games/memory_game/memory-game/memory-game.page.scss
+++ b/cliente/src/app/pages/games/memory_game/memory-game/memory-game.page.scss
@@ -2,6 +2,15 @@
 //   --background: #f0f0f0;
 // }
 
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border: solid 2px #000;
+  border-radius: 12px;
+}
+
+
 .title-container {
   display: flex;
   align-items: center;
@@ -138,13 +147,15 @@ p {
   }
 }
 
-.buttons{
-  ion-button{
-    width: 180px;
-    height: 40px;
-    margin-right: 10px;
-    margin-left: 10px;
-  }
+.buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column; /* Alinea los botones en columna (opcional) */
+}
+
+ion-button {
+  margin-top: 10px; /* Ajusta según sea necesario para agregar espacio entre los botones */
 }
 //!Hecho por Javi, no tocar
 /*
