Changes of styles

--- a/cliente/src/app/home/home.page.html
+++ b/cliente/src/app/home/home.page.html
@@ -25,12 +25,12 @@
         </div>
 
         <div class="outer-container" (click)="navigateMemory()">
-          <div class="item-container-left">
-            <img src="../../assets/img/home_list/9868185_4280167.svg" alt="">
+          <div class="item-container-left right">
+            <img src="../../assets/img/home_list/16390809_5742805.svg" style="margin-top: 40px; padding-right: 10px;" alt="">
           </div>
-          <div class="item-container">
+          <div class="item-container right">
             <div class="inner-container">
-              <h4>Juego 2</h4>
+              <h4>Juego de Memoria</h4>
             </div>
           </div>
         </div>
