--- a/cliente/src/app/home/home.page.html
+++ b/cliente/src/app/home/home.page.html
@@ -19,7 +19,18 @@
           </div>
           <div class="item-container">
             <div class="inner-container">
-              <h4>Juego 1</h4>
+              <h4>Juego Puzzle!</h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="outer-container" (click)="navigateQAGame()">
+          <div class="item-container-left">
+            <img src="../../assets/img/home_list/9868185_4280167.svg" alt="">
+          </div>
+          <div class="item-container">
+            <div class="inner-container">
+              <h4>Preguntas y Respuestas</h4>
             </div>
           </div>
         </div>
