161123 add buttom to back in roulette

--- a/cliente/src/app/home/home.page.html
+++ b/cliente/src/app/home/home.page.html
@@ -37,13 +37,13 @@
         </div>
 
 
-        <div class="outer-container">
+        <div class="outer-container" (click)="navigateRoulette()">
           <div class="item-container-left right">
             <img src="../../assets/img/home_list/35457979_8312630.svg" alt="">
           </div>
           <div class="item-container right">
             <div class="inner-container">
-              <h4>Sist. Reproductor</h4>
+              <h4>Ruleta</h4>
             </div>
           </div>
         </div>
