--- a/cliente/src/app/pages/games/roulette/roulette.page.html
+++ b/cliente/src/app/pages/games/roulette/roulette.page.html
@@ -1,5 +1,12 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-title class="title-container">
+      <ion-icon routerLink="/home" name="arrow-back-outline" class="icon"></ion-icon>
+      Volver a los juegos
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
 <ion-content>
-
   <!-- Contenido de la tarjeta -->
   <ion-card-content>
 
