--- a/cliente/src/app/pages/games/roulette/roulette.page.scss
+++ b/cliente/src/app/pages/games/roulette/roulette.page.scss
@@ -17,4 +17,14 @@
   font-family: 'Source Sans Pro'; 
   text-align: center;
 }
+//BARRA SUPERIOR para volver a los juegos
+.title-container {
+  display: flex;
+  align-items: center;
+}
+.icon {
+  margin-right: 70px;
+  font-size: 26px;
+  vertical-align: text-top;
+}
 .tracking-in-contract{animation:tracking-in-contract 0.4s linear both} @keyframes tracking-in-contract{0%{letter-spacing:.6em;opacity:0}40%{opacity:.6}100%{letter-spacing:normal;opacity:1}}
