--- a/cliente/src/app/home/home.page.html
+++ b/cliente/src/app/home/home.page.html
@@ -48,6 +48,17 @@
           </div>
         </div>
 
+        <div class="outer-container" (click)="navigateAR()">
+          <div class="item-container-left">
+            <img src="../../assets/img/home_list/9868185_4280167.svg" alt="">
+          </div>
+          <div class="item-container">
+            <div class="inner-container">
+              <h4>Realidad Aumentada</h4>
+            </div>
+          </div>
+        </div>
+
 
       </div>
     </div>
