--- a/cliente/src/app/home/home.page.html
+++ b/cliente/src/app/home/home.page.html
@@ -19,7 +19,7 @@
           </div>
           <div class="item-container">
             <div class="inner-container">
-              <h4>Juego 1</h4>
+              <h4>Rompecabezas</h4>
             </div>
           </div>
         </div>
